--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -8,6 +8,14 @@
     tools:context=".ListActivity"
     android:padding="20dp">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_alignParentEnd="true"
+        app:srcCompat="@drawable/ic_person" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
